# tripleo-auto-abandon

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  auto-abandon.conf.sample  openstack-common.conf  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
tripleo_auto_abandon/: __init__.py  _opts.py  auto_abandon.py
tripleo_auto_abandon/tests/: test_tripleo_auto_abandon.py
