[metadata]
name = tripleo-auto-abandon
summary = Auto-abandon bot for the TripleO Gerrit projects.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    tripleo_auto_abandon

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tripleo_auto_abandon/locale
domain = tripleo-auto-abandon

[update_catalog]
domain = tripleo-auto-abandon
output_dir = tripleo_auto_abandon/locale
input_file = tripleo_auto_abandon/locale/tripleo-auto-abandon.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleo_auto_abandon/locale/tripleo-auto-abandon.pot
